# uv

./: my_prettier_ignore
crates/uv-bench/benches/: cached_metadata_queue.rs
crates/uv-bench/examples/: cached_metadata_queue.rs
crates/uv-bench/tests/: bench_install.rs
crates/uv-install-data-bench/: Cargo.toml
crates/uv-install-data-bench/src/: main.rs
crates/uv-install-wheel/src/: linker.rs
